--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,21 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
+      <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <!-- <ion-button (click)="opneActionSheet()">Action Sheet</ion-button> -->
+  <ion-fab>
+    <ion-row text-center> 
+      <ion-fab-button size ="small"(click)="opneActionSheet()">+</ion-fab-button>
+      <ion-fab-button size ="small"(click)="showToast()"><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
+      <ion-fab-button size ="small"(click)="showToast()"><ion-icon name="heart"></ion-icon></ion-fab-button>
+    </ion-row>
+  </ion-fab>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
