sidemenu with basic label examples

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -31,4 +31,7 @@
     </ion-item>
   </div>
   <ion-button expand="block" fill="clear" color="transparent">submit</ion-button>
+    <ion-button (click)="logoutUser()">
+        Logout
+      </ion-button>
 </ion-content>
