attempt to fix the null injector

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <!-- <ion-button (click)="opneActionSheet()">Action Sheet</ion-button> -->
+  <ion-button (click)="showToast()">Logout</ion-button>
   <ion-fab>
     <ion-row text-center> 
       <ion-fab-button size ="small"(click)="opneActionSheet()">+</ion-fab-button>
