--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,6 +9,6 @@
     login
   </ion-button>
  
-  <a [routerLink]="['/dashboard']">Go to dashboard</a>
+  <a routerLink="/home">open Home</a>
 
 </ion-content>
